# myagent

./: .gitignore  Cargo.toml  README.md  install.cmd  install.ps1
.github/workflows/: release.yml
docs/: feishu-file.md
plan/: plan.md
scripts/: install.cmd  install.ps1  install.sh  test-install.sh  uninstall.sh
src/: cmd_config.rs  cmd_feishu.rs  cmd_init.rs  cmd_update.rs  config.rs  daemon.rs  health.rs  main.rs  protocol.rs  thread.rs  thread_manager.rs  update_check.rs
src/agent/: ai.rs  claude.rs  mod.rs
src/ai/: client.rs  mod.rs  types.rs
src/frontend/: cli.rs  feishu.rs  mod.rs
src/tools/: apply_patch.rs  bash.rs  grep_files.rs  list_dir.rs  mod.rs  read_file.rs  shell.rs
src/transport/feishu/: api.rs  event.rs  mod.rs  proto.rs
