[package]
name = "myagent"
version = "0.1.4"
edition = "2024"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
eventsource-stream = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
tokio-util = "0.7"
async-trait = "0.1"
prost = "0.13"
url = "2"
libc = "0.2"
dirs = "6"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
axum = "0.8.8"
self-replace = "1"
flate2 = "1"
tar = "0.4"
zip = "2"
